# ng

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  THIRDPARTY.txt  main.cpp  ng.cpp  ng.h  utf8.h  vcpkg.json
docs/: README.md
docs/demo/breakout/: main.cpp  ng.html  ng.js  ng.wasm
docs/demo/tetris/: main.cpp  ng.js  ng.wasm
src/: main.cpp  ng.cpp  ng.h  splitmix64.h  utf8.h  xoshiro256plusplus.h
